# Ops-tools

./: .gitattributes  .gitignore  CHANGELOG.md  DDI_Toolkit.pptx  PLAN_intelligent_search.md  QUICK_START.md  README.md  ddi  package.json  pyproject.toml  requirements.txt  setup.sh
ddi_toolkit/: __init__.py  ddi_entry.py  main.py  network_view.py  output.py  wapi.py
ddi_toolkit/commands/: base.py  bulk.py  container.py  dhcp.py  ip.py  network.py  search.py  zone.py
ddi_toolkit/ui/: __init__.py  display.py  menu.py  prompts.py
docs/: ARCHITECTURE.md  DDI_Toolkit_Presentation.md  PRD.md
lib/: audit.py  config.py  output.py  wapi.py
lib/commands/: __init__.py  base.py  dhcp.py  ip.py  network.py  search.py
lib/ui/: colors.py  menu.py
scripts/: cleanup_claude_test_data.py  create_claude_test_data.py  test_live_infoblox.py  test_quiet_mode.py
tests/: __init__.py  conftest.py  test_audit.py  test_bulk.py  test_commands.py  test_config.py  test_network_view.py  test_output.py  test_wapi.py
