[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddi-toolkit"
version = "0.1.0"
description = "Swiss Army Knife for InfoBlox DDI Engineers"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "rich>=13.7.0",
    "click>=8.1.0",
]
requires-python = ">=3.8"

[project.scripts]
ddi = "ddi_toolkit.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools]
packages = ["ddi_toolkit"]
